# image-resize-rs

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
samples/: .gitignore
src/: aws.rs  config.rs  error.rs  handler.rs  main.rs  request.rs
terraform/: .gitignore  main.tf
