[package]
name = "image-resize"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
aws-config = "1"
aws-sdk-s3 = "1"
image = "0.24"
lambda_http = { version = "0.10", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.10"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
url = "2.4"

[dev-dependencies]
serial_test = "3"

